# pali-language-services

./: .gitignore  Cargo.toml  README.md  inflections.db
all_words_gen/: Cargo.toml
all_words_gen/src/: args.rs  inflection_info.rs  inflection_sql_queries.rs  inflections.rs  main.rs  stem_info.rs
all_words_gen/src/snapshots/: all_words_gen__inflection_info__tests__create_inflection_infos.snap  all_words_gen__inflection_sql_queries__tests__create_inflection_infos.snap  all_words_gen__inflections__tests__create_inflection_infos.snap
all_words_gen/src/templates/: batch_sql_template.sql
core/: Cargo.toml
js_lib/: Cargo.toml  README.md
js_lib/pkg/: package.json  pali_language_services_dal.js
js_lib/src/: alphabet.rs  inflections.rs  lib.rs
pkg/: README.md  (+5 more)
pls_core/: Cargo.toml
pls_core/src/: alphabet.rs  inflections.rs  lib.rs
pls_core/src/inflections/: host.rs  mod.rs  pmd.rs
pls_core/src/inflections/generators/: conjugation.rs  declension.rs  declension_pron_1st.rs  declension_pron_2nd.rs  declension_pron_dual.rs  declension_pron_x.rs  indeclinable.rs  mod.rs
pls_core/src/inflections/snapshots/: pls_core__inflections__pmd__tests__get_pali1_metadata_tests__indeclinable.snap  pls_core__inflections__pmd__tests__get_pali1_metadata_tests__inflected_form.snap  pls_core__inflections__pmd__tests__get_pali1_metadata_tests__irregular.snap  pls_core__inflections__pmd__tests__get_pali1_metadata_tests__not_found.snap  pls_core__inflections__pmd__tests__get_pali1_metadata_tests__regular.snap  pls_core__inflections__tests__inflected_word_tests__indeclinable.snap  pls_core__inflections__tests__inflected_word_tests__inflected_form.snap  pls_core__inflections__tests__inflected_word_tests__irregular.snap  pls_core__inflections__tests__inflected_word_tests__regular.snap  pls_core__inflections__tests__inflection_tests__conjugation_1.snap  pls_core__inflections__tests__inflection_tests__conjugation_1_en.snap  pls_core__inflections__tests__inflection_tests__conjugation_1_ltn.snap  pls_core__inflections__tests__inflection_tests__conjugation_1_xx.snap  pls_core__inflections__tests__inflection_tests__conjugation_1_xx_short.snap  pls_core__inflections__tests__inflection_tests__declension_1.snap  pls_core__inflections__tests__inflection_tests__declension_1_ltn_.snap  pls_core__inflections__tests__inflection_tests__declension_1_xx_.snap  pls_core__inflections__tests__inflection_tests__declension_1_xx_short.snap  pls_core__inflections__tests__inflection_tests__declension_2_irreg.snap  pls_core__inflections__tests__inflection_tests__declension_2_irreg_latn.snap  pls_core__inflections__tests__inflection_tests__declension_2_irreg_xx.snap  pls_core__inflections__tests__inflection_tests__declension_2_irreg_xx_short.snap  pls_core__inflections__tests__inflection_tests__declension_3_ind.snap  pls_core__inflections__tests__inflection_tests__declension_3_ind_xx.snap  pls_core__inflections__tests__inflection_tests__declension_3_ind_xx_short.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_1st.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_1st_latn.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_1st_xx.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_2nd.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_2nd_latn.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_2nd_xx.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_dual.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_dual_latn.snap  pls_core__inflections__tests__inflection_tests__declension_4_pron_dual_xx.snap  pls_core__inflections__tests__inflection_tests__declension_5_only_x_gender.snap  pls_core__inflections__tests__inflection_tests__declension_5_only_x_gender_deva.snap  pls_core__inflections__tests__inflection_tests__declension_5_only_x_gender_latn.snap  (+9 more)
pls_core/src/snapshots/: pls_core__tests__inflected_word_tests__indeclinable.snap  pls_core__tests__inflected_word_tests__irregular.snap  pls_core__tests__inflected_word_tests__regular.snap  pls_core__tests__inflection_tests__conjugation_1.snap  pls_core__tests__inflection_tests__declension_1.snap  pls_core__tests__inflection_tests__declension_2_irreg.snap  pls_core__tests__inflection_tests__declension_3_ind.snap  pls_core__tests__inflection_tests__declension_4_pron_1st.snap  pls_core__tests__inflection_tests__declension_4_pron_2nd.snap  pls_core__tests__inflection_tests__declension_4_pron_dual.snap
pls_core_extras/: Cargo.toml
pls_core_extras/src/: host.rs  inflection_generator.rs  lib.rs  logger.rs  sql_access.rs
test_app/: Cargo.toml  inflections.db
test_app/src/: main.rs
test_app/src/snapshots/: test_app__tests__inflected_word_indeclinable_test.snap  test_app__tests__inflected_word_irregular_test.snap  test_app__tests__inflected_word_regular_test.snap  test_app__tests__inflection_tests__conjugation_1.snap  test_app__tests__inflection_tests__declension_1.snap  test_app__tests__inflection_tests__declension_2_irreg.snap  test_app__tests__inflection_tests__declension_3_ind.snap  test_app__tests__inflection_tests__declension_4_pron_1st.snap  test_app__tests__inflection_tests__declension_4_pron_2nd.snap  test_app__tests__inflection_tests__declension_4_pron_dual.snap
test_app/src/test_data/: basic_inflection_test.approved.txt  conjugation - 1.approved.html  declension - 1.approved.html  declension - 2 - irreg.approved.html
(+16 files in other folders)
