[package]
name = "pali_core"
version = "0.1.0"
authors = ["Digital PÄli Tools <digitalpalitools@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"

[dev-dependencies]
cargo-watch = "7.5.0"
proptest = "0.10.1"
