[package]
name = "pali_core"
version = "0.1.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num_enum = "0.5.1"
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1.6"

[dev-dependencies]
cargo-watch = "7.5.0"
proptest = "0.10.1"
test-case = "1.1.0"
wasm-bindgen-test = "0.3.19"

[profile.release]
opt-level = "s" # Optimize for small code size.
