[package]
name = "pali-language-services"
version = "2.0.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"
description = "Define the basics of the Pāli language in code as per https://bitly.com/dptvision."
repository = "https://github.com/digitalpalitools/pali-language-services"
license = "CC BY-NC-SA 4.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
pls_core = { path = '../pls_core' }
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1.6"


[dev-dependencies]
cargo-watch = "7.5.0"
proptest = "0.10.1"
test-case = "1.1.0"
wasm-bindgen-test = "0.3.19"

[profile.release]
opt-level = "s" # Optimize for small code size.
