[package]
name = "pls_core"
version = "1.0.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"
description = "Define the basics of the Pāli language in code as per https://bitly.com/dptvision."

[lib]
crate-type = ["rlib"]

[dependencies]
num_enum = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
regex = "1.4.4"

[dependencies.tera]
version = "1.6.1"
default-features = false

[dev-dependencies]
cargo-watch = "7.5.0"
proptest = "0.10.1"
test-case = "1.1.0"
insta = "1.7.0"
cargo-insta = "1.7.0"

[dev-dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]
