[package]
name = "test_app"
version = "0.1.0"
authors = ["Digital Pāli Tools <digitalpalitools@gmail.com>"]
edition = "2018"
description = "Pāli language services test app."

[dependencies]
pls_core = { path = '../pls_core' }
serde_json = "1.0.63"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dev-dependencies]
cargo-watch = "7.5.0"
proptest = "0.10.1"
test-case = "1.1.0"
insta = "1.7.0"
cargo-insta = "1.7.0"